--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Publish to Github Packages
       run: npm publish --access=public
       env:
-        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
